--- a/index.html
+++ b/index.html
@@ -10,60 +10,77 @@
       src: url('./assets/fonts/しねきゃぷしょん.ttf') format('truetype');
     }
     body {
-      background-color: #fdfcf7; /* 背景色 オフホワイト */
-      font-family: 'ShineCaption', sans-serif; /* フォント設定 */
-      text-align: center; /* 中央揃え */
-      padding: 10px; /* 他要素との間隔 */
+      background-color: #fdfcf7;
+      font-family: 'ShineCaption', sans-serif;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+    }
+    #titleScreen {
+      padding: 20px;
     }
     h1 {
-      font-size: 1.8rem; /* タイトル文字大きさ */
-      color: #cd7d7f; /* ピン色 */
+      font-size: 1.8rem;
+      color: #cd7d7f;
     }
-    #startButton {
-      font-size: 1.0rem; /* ボタン文字 */
-      padding: 8px 16px; /* 内部の間隔 */
-      margin-top: 20px; /* 上に間隔 */
-      background-color: #cd7d7f; /* ボタン背景 */
-      color: white; /* 文字色 */
-      border: none; /* 枠無し */
-      border-radius: 10px; /* ボタン角丸め */
+    #startButton, #restartButton {
+      font-size: 1.0rem;
+      padding: 8px 16px;
+      margin-top: 20px;
+      background-color: #cd7d7f;
+      color: white;
+      border: none;
+      border-radius: 10px;
     }
     #gameScreen {
-      display: none; /* 初期は表示しない */
-      margin-top: 20px; /* 上に間隔 */
-      background-image: url('haikei.jpeg');
+      display: none;
+      position: relative;
+      background-image: url('./assets/haikei.jpeg');
       background-repeat: no-repeat;
-      background-size: contain; /* 元画像の縦横比を保って全体を表示 */
-      background-position: center top;
+      background-size: contain;
+      background-position: center;
+      padding: 40px 20px;
+      border-radius: 20px;
+      margin: 20px auto;
+      max-width: 400px;
+      color: #fffaf0;
     }
-    #kanaText, #inputArea {
-      font-size: 1.5rem; /* 文字大きさ */
-      margin: 10px auto; /* 上下10px、中央 */
+    #kanjiText {
+      font-size: 1.6rem;
+      margin: 10px auto 5px;
+    }
+    #kanaText {
+      font-size: 1.3rem;
+      margin: 5px auto 20px;
     }
     input[type="text"] {
-      font-size: 1.2rem; /* 入力文字大きさ */
-      padding: 8px;
-      width: 80%; /* 入力ボックス幅 */
-      border: 1px solid #ccc; /* 枠 */
-      border-radius: 8px; /* 角丸め */
+      font-size: 1.2rem;
+      padding: 10px;
+      width: 90%;
+      border: 1px solid #ccc;
+      border-radius: 8px;
     }
     #small-timer {
-      position: absolute;        /* 画面の右上にくっつけるため */
-      top: 10px;                 /* 上からの距離 */
-      right: 10px;               /* 右からの距離 */
-      font-size: 0.8rem;         /* 文字サイズ小さめ */
-      color: white;              /* 文字の色 */
+      position: absolute;
+      top: 8px;
+      right: 12px;
+      font-size: 0.9rem;
+      color: white;
       font-family: 'ShineCaption', sans-serif;
     }
-    #result-screen {
-      display: block;
-      background-image: url('haikei.jpeg');
-      background-size: cover;
+    #muteButton {
+      font-size: 0.8rem;
+      padding: 6px 10px;
+      margin-top: 10px;
+      background-color: #ccc;
+      color: #333;
+      border: none;
+      border-radius: 6px;
     }
     #result {
       font-family: 'ShineCaption', sans-serif;
       color: white;
-      font-size: 20px;
+      font-size: 18px;
       margin-top: 30px;
       line-height: 1.6;
     }
@@ -77,67 +94,28 @@
 <body>
   <!-- タイトル画面 -->
   <div id="titleScreen">
+    <img src="./assets/banner.jpg" alt="Banner" style="max-width: 90%; height: auto;" />
     <h1>setareiASMR 5TH ANNIVERSARY</h1>
     <p>2025/6/28 世田れい活動5周年のお祝いゲームです。</p>
     <p>世田れいさんに関連するお題がランダムで表示されます。</p>
-    <p style="color: red;">センシティブ注意</p> 
+    <p style="color: red;">センシティブ注意</p>
     <p style="color: #888;">※ すべてひらがなで入力してください</p>
     <button id="startButton">🧸START</button>
-    <br><br>
-    <p style="color: #888;">※ このゲームは世田れいさんとファンの方に<br>　　　遊んでいただくことを前提に制作しています。</p>
+    <p style="color: #888; font-size: 0.8rem; margin-top: 1rem;">※ このゲームは世田れいさんとファンの方に<br>遊んでいただくことを前提に制作しています。</p>
   </div>
 
   <!-- ゲーム画面 -->
   <div id="gameScreen">
-  <p id="kanjiText"></p> <!-- ← 漢字 -->
-  <p id="kanaText"></p>  <!-- ← かな -->
-  <input id="inputBox" type="text">
-  <p id="judgeText"></p> <!-- 判定表示用（今は使用なし） -->
+    <div id="small-timer">60</div>
+    <p id="kanjiText"></p>
+    <p id="kanaText"></p>
+    <input id="inputBox" type="text" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
+    <div id="result"></div>
+    <button id="restartButton" style="display:none;">もう一回する</button>
+    <br><br>
+    <button id="muteButton">BGM: ON</button>
   </div>
-  <div id="small-timer">60</div>
 
-  <script>
-    const startButton = document.getElementById("startButton");
-    const titleScreen = document.getElementById("titleScreen");
-    const gameScreen = document.getElementById("gameScreen");
-    const kanaText = document.getElementById("kanaText");
-    const inputBox = document.getElementById("inputBox");
-    const judgeText = document.getElementById("judgeText");
-
-    const problems = [
-      { kanji: "れいさん大好き", kana: "れいさんだいすき" },
-      { kanji: "やったー", kana: "やったー" },
-      { kanji: "欲求不満", kana: "よっきゅうふまん" },
-    ];
-
-    let currentIndex = 0;
-
-    startButton.addEventListener("click", () => {
-      titleScreen.style.display = "none";
-      gameScreen.style.display = "block";
-      showProblem();
-    });
-
-    function showProblem() {
-      const current = problems[currentIndex];
-      kanaText.innerHTML = `<strong>${current.kanji}</strong>`;
-      inputBox.value = "";
-      judgeText.textContent = "";
-      inputBox.focus();
-    }
-
-    inputBox.addEventListener("input", () => {
-      const typed = inputBox.value.trim();
-      const answer = problems[currentIndex].kana;
-      if (typed === answer) {
-        judgeText.textContent = "正解ー!";
-        judgeText.style.color = "green";
-        currentIndex = (currentIndex + 1) % problems.length;
-        setTimeout(showProblem, 1000);
-      } else {
-        judgeText.textContent = "";
-      }
-    });
-  </script>
+  <script type="module" src="./main.js"></script>
 </body>
 </html>
