--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     #gameScreen {
       display: none;
       position: relative;
-      background-image: url('./assets/haikei.jpeg');
+      background-image: url('haikei.jpeg');
       background-repeat: no-repeat;
       background-size: contain;
       background-position: center;
@@ -94,7 +94,7 @@
 <body>
   <!-- タイトル画面 -->
   <div id="titleScreen">
-    <img src="./assets/banner.jpg" alt="Banner" style="max-width: 90%; height: auto;" />
+    <img src="banner.jpg" alt="Banner" style="max-width: 90%; height: auto;" />
     <h1>setareiASMR 5TH ANNIVERSARY</h1>
     <p>2025/6/28 世田れい活動5周年のお祝いゲームです。</p>
     <p>世田れいさんに関連するお題がランダムで表示されます。</p>
