--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       font-size: 1.8rem;
       color: #cd7d7f;
     }
-    #startButton, #restartButton {
+    #startButton {
       font-size: 1.0rem;
       padding: 8px 16px;
       margin-top: 20px;
@@ -32,10 +32,19 @@
       border: none;
       border-radius: 10px;
     }
+    #restartButton {
+      font-size: 1.0rem;
+      padding: 8px 16px;
+      margin-top: 20px;
+      background-color: #333;
+      color: white;
+      border: none;
+      border-radius: 10px;
+    }
     #gameScreen {
       display: none;
       position: relative;
-      background-image: url('haikei.jpeg');
+      background-image: url('./assets/haikei.jpeg');
       background-repeat: no-repeat;
       background-size: contain;
       background-position: center;
