--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     #gameScreen {
       display: none;
       position: relative;
-      background-image: url('./assets/haikei.jpeg');
+      background-image: url('haikei.jpeg');
       background-repeat: no-repeat;
       background-size: contain;
       background-position: center;
