--- a/index.html
+++ b/index.html
@@ -68,15 +68,16 @@
       font-size: 1.2rem;
       padding: 10px;
       width: 90%;
-      border: 1px solid #ccc;
+      border: none; /* ← ここで枠を削除 */
       border-radius: 8px;
+      background-color: #fffaf0; /* 塗りつぶしと同じ色 */
     }
     #small-timer {
       position: absolute;
-      top: 150px;
-      right: 12px;
+      top: 100px;
+      left: 12px;
       font-size: 0.9rem;
-      color: #333;
+      color: white;
       font-family: 'ShineCaption', sans-serif;
     }
     #muteButton {
