--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
   <!-- タイトル画面 -->
   <div id="titleScreen">
     <img src="banner.jpg" alt="Banner" style="max-width: 100%; height: auto;" />
-    <h1>setareiASMR<br><br>5TH ANNIVERSARY</h1>
-    <p>世田れい活動5周年のお祝いに<br>フリック入力ゲームを制作しました。</p>
+    <h1>setareiASMR<br>5TH ANNIVERSARY</h1>
+    <p>世田れい活動5周年のお祝いに<br><br>フリック入力ゲームを制作しました。</p>
     <p style="color: red;">センシティブ注意</p>
     <p style="color: #888;">お題はランダムで表示されます。</p>
     <p style="color: #888;">※すべてひらがなで入力してください。</p>
