--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       padding: 1.0px;
     }
     h1 {
-      font-size: 1.7rem;
+      font-size: 1.8rem;
       color: #cd7d7f;
     }
     #startButton {
@@ -111,7 +111,7 @@
   <div id="titleScreen">
     <img src="banner.jpg" alt="Banner" style="max-width: 100%; height: auto;" />
     <h1>setareiASMR<br>5TH ANNIVERSARY</h1>
-    <p>世田れい活動5周年のお祝いに<br><br><br>フリック入力ゲームを制作しました。</p>
+    <p>世田れい活動5周年のお祝いに<br><br>フリック入力ゲームを制作しました。</p>
     <p style="color: red;">センシティブ注意</p>
     <p style="color: #888;">※すべてひらがなで入力してください。<br>お題はランダムで表示されます。</p>
     <button id="startButton">🧸START</button>
