--- a/index.html
+++ b/index.html
@@ -111,10 +111,11 @@
   <div id="titleScreen">
     <img src="banner.jpg" alt="Banner" style="max-width: 100%; height: auto;" />
     <h1>setareiASMR<br>5TH ANNIVERSARY</h1>
-    <p>世田れい活動5周年のお祝いに<br><br>フリック入力ゲームを制作しました。</p>
+    <p>世田れい活動5周年のお祝いに<br>フリック入力ゲームを制作しました。<br><br>お題はランダムで表示されます。</p>
     <p style="color: red;">センシティブ注意</p>
-    <p style="color: #888;">※すべてひらがなで入力してください。<br>お題はランダムで表示されます。</p>
+    <p style="color: #888;">※すべてひらがなで入力してください。</p>
     <button id="startButton">🧸START</button>
+    <br>
     <p style="color: #888; font-size: 0.8rem; margin-top: 1rem;">※本ゲームは世田れいさんとれいさんファンの方に<br><space>遊んでいただくことを前提に制作しています。</p>
   </div>
 
