--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       padding: 1.0px;
     }
     h1 {
-      font-size: 1.8rem;
+      font-size: 1.9rem;
       color: #cd7d7f;
     }
     #startButton {
@@ -115,8 +115,8 @@
     <p style="color: red;">センシティブ注意</p>
     <p style="color: #888;">※すべてひらがなで入力してください。</p>
     <button id="startButton">🧸START</button>
-    <br>
-    <p style="color: #888; font-size: 0.8rem; margin-top: 1rem;">※本ゲームは世田れいさんとれいさんファンの方に<br><space>遊んでいただくことを前提に制作しています。</p>
+    <br><br>
+    <p style="color: #888; font-size: 0.8rem; margin-top: 1rem;">本ゲームは世田れいさんとれいさんファンの方に<br>遊んでいただくことを前提に制作しています。</p>
   </div>
 
   <!-- ゲーム画面 -->
