--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <p style="color: #888;">※すべてひらがなで入力してください。</p>
     <button id="startButton">🧸START</button>
     <br><br>
-    <p style="color: #888; font-size: 0.8rem; margin-top: 1rem;">本ゲームは世田れいさんとれいさんファンの方に<br>遊んでいただくことを前提に制作しています。</p>
+    <p style="color: #888; font-size: 0.8rem; margin-top: 1rem;">本ゲームは世田れいさんと世田れいさんファンの方に<br>遊んでいただくことを前提に制作しています。</p>
   </div>
 
   <!-- ゲーム画面 -->
