--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       font-size: 1.0rem;
       padding: 8px 16px;
       margin-top: 40px;
-      background-color: #ccc;
-      color: #333;
+      background-color: #333;
+      color: white;
       border: none;
       border-radius: 10px;
     }
@@ -86,7 +86,6 @@
       left: 12px;
       font-size: 0.5rem;
       padding: 2px 4px;
-      margin-top: 5px;
       background-color: #ccc;
       color: #333;
       border: none;
