--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
       font-family: 'ShineCaption', sans-serif;
       color: white;
       font-size: 18px;
-      margin-top: 30px;
+      margin-top: 50px;
+      margin-bottom: 30px;
       line-height: 1.6;
     }
     #result .rank {
