--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     }
     #gameScreen {
       display: none;
-      position: relative;
+      position: absolute;
       background-image: url('haikei.jpeg');
       background-repeat: no-repeat;
       background-size: contain;
@@ -53,7 +53,7 @@
       margin: 20px auto;
       max-width: 400px;
       color: #fffaf0;
-      margin-top: 0.1px; 
+      margin-top: 10px; 
       margin-bottom: 80px; 
     }
     #kanjiText {
