--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
     #gameScreen {
       display: none;
       position: absolute;
+      top: 10px;
+      left: center;
       background-image: url('haikei.jpeg');
       background-repeat: no-repeat;
       background-size: contain;
@@ -53,8 +55,6 @@
       margin: 20px auto;
       max-width: 400px;
       color: #fffaf0;
-      margin-top: 0.5px; 
-      margin-bottom: 80px; 
     }
     #kanjiText {
       font-size: 1.6rem;
