--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
     }
     #gameScreen {
       display: none;
-      position: absolute;
-      top: 0.5px;
-      left: center;
+      position: relative;
       background-image: url('haikei.jpeg');
       background-repeat: no-repeat;
       background-size: contain;
@@ -54,6 +52,8 @@
       border-radius: 20px;
       max-width: 400px;
       color: #fffaf0;
+      margin-top: 0.1px; 
+      margin-bottom: 80px; 
     }
     #kanjiText {
       font-size: 1.6rem;
@@ -121,10 +121,10 @@
   <!-- ゲーム画面 -->
   <div id="gameScreen">
     <button id="muteButton">BGM: ON</button>
+    <div id="small-timer">残り60秒</div>
     <p id="kanjiText"></p>
     <p id="kanaText"></p>
     <input id="inputBox" type="text" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
-    <div id="small-timer">残り60秒</div>
     <div id="result"></div>
     <button id="restartButton" style="display:none;">🧸Replay</button>
   </div>
