--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       width: 80%;
       border: none; /* ← ここで枠を削除 */
       border-radius: 8px;
-      background-color: #fffaf0; /* 塗りつぶしと同じ色 */
+      background-color: #cd7d7f; /* 塗りつぶしと同じ色 */
     }
     #small-timer {
       position: absolute;
