--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     }
     input[type="text"] {
       font-size: 1.2rem;
+      color: white;
       padding: 10px;
       width: 80%;
       border: none; /* ← ここで枠を削除 */
