--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       font-size: 1.0rem;
       padding: 8px 16px;
       margin-top: 40px;
-      background-color: #333;
+      background-color: #fdc0fc;
       color: white;
       border: none;
       border-radius: 10px;
@@ -70,7 +70,7 @@
       width: 80%;
       border: none; /* ← ここで枠を削除 */
       border-radius: 8px;
-      background-color: #cd7d7f; /* 塗りつぶしと同じ色 */
+      background-color: #bf7475; /* 塗りつぶしと同じ色 */
     }
     #small-timer {
       position: absolute;
