--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       font-size: 1.0rem;
       padding: 8px 16px;
       margin-top: 40px;
-      background-color: #cd7d7f;
+      background-color: #ccc;
       color: white;
       border: none;
       border-radius: 10px;
