--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
       border-radius: 8px;
       background-color: #cd7d7f; /* 塗りつぶしと同じ色 */
     }
+    input[type="text"]:focus {
+      outline: none;                /* デフォルトの枠線を消す */
+      border: 1px solid #cd7d7f;    /* 好きな色にする（れいさんピンク） */
+    }
     #small-timer {
       position: absolute;
       top: 60px;
