--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
     <div id="small-timer">残り60秒</div>
     <p id="kanjiText"></p>
     <p id="kanaText"></p>
+    <input id="inputBox" type="text" style="opacity: 0; position: absolute; z-index: -1;" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
     <div id="result"></div>
     <button id="restartButton" style="display:none;">🧸Replay</button>
   </div>
