--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     }
     #small-timer {
       position: absolute;
-      top: 200px;
+      top: 60px;
       left: 12px;
       font-size: 0.8rem;
       color: white;
@@ -108,6 +108,23 @@
       color: white;
       font-weight: bold;
     }
+    #progress-container {
+      width: 100%;
+      height: 6px;
+      background-color: #eee;
+      margin: 0 auto;
+      border-radius: 3px;
+      overflow: hidden;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+    #progress-bar {
+      height: 100%;
+      width: 0%;
+      background-color: red;
+      transition: width 1s linear;
+    }
   </style>
 </head>
 <body>
@@ -130,9 +147,13 @@
     <p id="kanjiText"></p>
     <p id="kanaText"></p>
     <input id="inputBox" type="text" style="opacity: 0; position: absolute; z-index: -1;" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
+　　<div id="progress-container">
+  　<div id="progress-bar"></div>
+　</div>
     <div id="result"></div>
     <button id="restartButton" style="display:none;">🧸Replay</button>
   </div>
+
 
   <script type="module" src="./main.js"></script>
 </body>
