--- a/index.html
+++ b/index.html
@@ -117,17 +117,18 @@
     }
 
     /* ✅ シークバー追加部分 */
-    #progress-container {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 4px;
-      background-color: #eee;
-      border-radius: 2px;
-      overflow: hidden;
-      z-index: 10;
-    }
+<style>
+  #progress-container {
+    width: 100%;
+    height: 4px;
+    background-color: #eee;
+    border-radius: 2px;
+    overflow: hidden;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 999;
+  }
 
   #progress-bar {
     height: 100%;
@@ -135,6 +136,7 @@
     background-color: red;
     transition: width 1s linear;
   }
+　</style>
   </style>
 </head>
 <body>
@@ -161,5 +163,6 @@
     <button id="restartButton" style="display:none;">🧸Replay</button>
   </div>
 
+  <div id="progress-container"><div id="progress-bar"></div></div>
 </body>
 </html>
