--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
       font-family: 'ShineCaption';
       src: url('./assets/fonts/しねきゃぷしょん.ttf') format('truetype');
     }
-
     body {
       background-color: #fdfcf7;
       font-family: 'ShineCaption', sans-serif;
@@ -17,16 +16,13 @@
       margin: 0;
       padding: 0;
     }
-
     #titleScreen {
-      padding: 1px;
+      padding: 1.0px;
     }
-
     h1 {
       font-size: 1.9rem;
       color: #cd7d7f;
     }
-
     #startButton {
       font-size: 1.0rem;
       padding: 8px 16px;
@@ -36,7 +32,6 @@
       border: none;
       border-radius: 10px;
     }
-
     #restartButton {
       font-size: 1.0rem;
       padding: 8px 16px;
@@ -46,7 +41,6 @@
       border: none;
       border-radius: 10px;
     }
-
     #gameScreen {
       display: none;
       position: relative;
@@ -57,21 +51,18 @@
       padding: 40px 20px;
       border-radius: 20px;
       max-width: 400px;
-      margin: 0 auto 80px;
       color: #fffaf0;
+      margin-top: 0.1px; 
+      margin-bottom: 80px; 
     }
-
     #kanjiText {
       font-size: 1.6rem;
-      margin-top: 50px;
-      margin-bottom: 5px;
+      margin: 50px auto 5px;
     }
-
     #kanaText {
       font-size: 0.9rem;
       margin: 10px auto 20px;
     }
-
     input[type="text"] {
       font-size: 1.2rem;
       color: white;
@@ -80,15 +71,14 @@
       border: none;
       border-radius: 8px;
       background-color: #cd7d7f;
-      opacity: 0;
       position: absolute;
+      opacity: 0;
       z-index: -1;
     }
-
     input[type="text"]:focus {
       outline: none;
+      border: 1px solid #cd7d7f;
     }
-
     #muteButton {
       position: absolute;
       top: 20px;
@@ -100,7 +90,6 @@
       border: none;
       border-radius: 4px;
     }
-
     #result {
       font-family: 'ShineCaption', sans-serif;
       color: white;
@@ -109,34 +98,29 @@
       margin-bottom: 0.5px;
       line-height: 1.6;
     }
-
     #result .rank {
       font-size: 36px;
       color: white;
       font-weight: bold;
     }
+    #progress-container {
+      width: 100%;
+      height: 4px;
+      background-color: #eee;
+      border-radius: 2px;
+      overflow: hidden;
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      z-index: 999;
+    }
 
-    /* ✅ シークバー追加部分 */
-<style>
-  #progress-container {
-    width: 100%;
-    height: 4px;
-    background-color: #eee;
-    border-radius: 2px;
-    overflow: hidden;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    z-index: 999;
-  }
-
-  #progress-bar {
-    height: 100%;
-    width: 0%;
-    background-color: red;
-    transition: width 1s linear;
-  }
-　</style>
+    #progress-bar {
+      height: 100%;
+      width: 0%;
+      background-color: red;
+      transition: width 1s linear;
+    }
   </style>
 </head>
 <body>
@@ -155,7 +139,7 @@
   <!-- ゲーム画面 -->
   <div id="gameScreen">
     <button id="muteButton">BGM: ON</button>
-    <div id="small-timer" style="display: none;"></div>
+    <div id="small-timer" style="display: none;">残り60秒</div>
     <p id="kanjiText"></p>
     <p id="kanaText"></p>
     <input id="inputBox" type="text" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
@@ -163,6 +147,9 @@
     <button id="restartButton" style="display:none;">🧸Replay</button>
   </div>
 
+  <!-- ✅ シークバー -->
   <div id="progress-container"><div id="progress-bar"></div></div>
+
+  <script type="module" src="./main.js"></script>
 </body>
 </html>
