--- a/index.html
+++ b/index.html
@@ -103,18 +103,17 @@
       color: white;
       font-weight: bold;
     }
+ /* ✅ シークバーのスタイル */
     #progress-container {
-      width: 100%;
-      height: 4px;
+      position: absolute;
+      bottom: 5%;
+      left: 10%;
+      width: 80%;
+      height: 6px;
       background-color: #eee;
-      border-radius: 2px;
+      border-radius: 3px;
       overflow: hidden;
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      z-index: 999;
     }
-
     #progress-bar {
       height: 100%;
       width: 0%;
