--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <img src="banner.jpg" alt="Banner" style="max-width: 100%; height: auto;" />
     <h1>setareiASMR<br>5TH ANNIVERSARY</h1>
     <p>世田れい活動5周年のお祝いに<br>フリック入力ゲームを制作しました。</p>
-    <p style="color: #888;">お題はランダムで表示されます。<br>※すべてひらがなで入力してください。</p>
+    <p style="color: #888;">お題はランダムで表示されます。<br>※ひらがなで入力してください。</p>
     <button id="startButton">🧸START</button>
     <br><br>
     <p style="color: #888; font-size: 0.8rem; margin-top: 1rem;">本ゲームは世田れいさんと世田れいさんファンの方に<br>遊んでいただくことを前提に制作しています。</p>
