--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
   <div id="titleScreen">
     <img src="banner.jpg" alt="Banner" style="max-width: 100%; height: auto;" />
     <h1>setareiASMR<br>5TH ANNIVERSARY</h1>
-    <p>世田れい活動5周年のお祝いに<br>フリック入力ゲームを制作しました。</p>
+    <p>活動5周年のお祝いフリック入力ゲームです。</p>
     <p style="color: #888;">お題はランダムで表示されます。</p>
     <p style="color: #888;">※すべてひらがなで入力してください。</p>
     <button id="startButton">🧸START</button>
     <br><br>
-    <p style="color: #888; font-size: 0.8rem; margin-top: 1rem;">本ゲームは世田れいさんと世田れいさんファンの方に<br>遊んでいただくことを前提に制作しています。</p>
+    <p style="color: #888; font-size: 0.8rem; margin-top: 1rem;">本ゲームは世田れいさんと世田れいさんのファンの方に<br>遊んでいただくことを前提に制作しています。</p>
     <p style="color: red; font-size: 0.8rem; margin-top: 1rem;">センシティブ注意</p>
   </div>
 
