--- a/index.html
+++ b/index.html
@@ -123,14 +123,12 @@
 </head>
 <body>
   <div id="titleScreen">
-    <img src="banner.jpg" alt="Banner" style="max-width: 100%; height: auto;" />
-    <h1>setareiASMR<br>5TH ANNIVERSARY</h1>
-    <p>活動5周年のお祝いフリック入力ゲームです。</p>
+    <img src="banner.jpg" alt="Banner" style="max-width: 90%; height: auto;" />
+    
+    <p>活動5周年をゆるく振り返るフリック入力ゲームです。</p>
     <p style="color: #888;">お題はランダムで表示されます。</p>
     <p style="color: #888;">※すべてひらがなで入力してください。</p>
     <button id="startButton">🧸START</button>
-    <br><br>
-    <p style="color: #888; font-size: 0.8rem; margin-top: 1rem;">本ゲームは世田れいさんと世田れいさんのファンの方に<br>遊んでいただくことを前提に制作しています。</p>
   </div>
 
   <div id="gameScreen">
