--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   <div id="titleScreen">
     <img src="banner.jpg" alt="Banner" style="max-width: 90%; height: auto;" />
     
-    <p>活動5周年をゆるく振り返るフリック入力ゲームです。</p>
+    <p>世田れいフリック入力ゲームです。</p>
     <p style="color: #888;">お題はランダムで表示されます。</p>
     <p style="color: #888;">※すべてひらがなで入力してください。</p>
     <button id="startButton">🧸START</button>
