--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
       margin-bottom: 80px; 
     }
     #kanjiText {
-      font-size: 0.8rem;
+      font-size: 18px;
       margin: 50px auto 5px;
     }
     #kanaText {
-      font-size: 0.5rem;
+      font-size: 9px;
       margin: 10px auto 20px;
     }
     input[type="text"] {
-      font-size: 0.8rem;
+      font-size: 1.2rem;
       color: white;
       padding: 10px;
       width: 80%;
