--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       margin-bottom: 80px; 
     }
     #kanjiText {
-      font-size: 18px;
+      font-size: 1.6rem;
       margin: 50px auto 5px;
     }
     #kanaText {
-      font-size: 9px;
+      font-size: 0.9rem;
       margin: 10px auto 20px;
     }
     input[type="text"] {
@@ -99,7 +99,7 @@
       line-height: 1.6;
     }
     #result .rank {
-      font-size: 30px;
+      font-size: 36px;
       color: white;
       font-weight: bold;
     }
